# moksha-pulsemixer

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile_Theme.am  README.md  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/themes/: default.edc  main.edc  mixer.edc  naviframe.edc  playbacks.edc
data/xml/: epulse.desktop  module.desktop
debian/: changelog  control  copyright  files  moksha-pulsemixer.lintian-overrides  postinst
debian/patches/: bodhi4.x.diff
po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  it.po  pt_BR.po  sr.po
src/lib/: common.h
src/lib/.deps/: src_lib_libepulse_la-common.Plo  src_lib_libepulse_la-epulse.Plo  src_lib_libepulse_la-epulse_ml.Plo
src/module/: e_mod_main.c
src/module/.deps/: e_mod_main.Plo
